Email address updated

--- a/bscs23198_home.html
+++ b/bscs23198_home.html
@@ -38,7 +38,7 @@
         <a href="page2.html">Click to Learn More</a>
     </section>
     <section class="footer">
-        <p>Contact: 123-456-7890980 | Email: contact@example.com | Location: Your Address</p>
+        <p>Contact: 123-456-7890980 | Email: someone@example.com | Location: Your Address</p>
     </section>
 </body>
 </html
